# jax-geneval

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: check_full_detector_checkpoint.py  check_mmdet_oracle.py  run_jax_geneval.py  run_unit_tests.py  summary_scores.py
src/jax_geneval/: __init__.py  color.py  detector.py  preprocess.py
tests/: test_deformable_attention.py  test_swin.py
