[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-geneval"
version = "0.1.0"
description = "JAX/TPU GenEval evaluator port"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pillow",
  "jax",
  "flax",
  "torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
preprocess = [
  "opencv-python",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
